# diesel_update

./: .env  Cargo.toml  README.MD
migrations/2022-10-18-144044_init/: down.sql  up.sql
src/: main.rs  schema.rs
